# conversation_ai

./: pyproject.toml
Source/Data/: Final.xlsx  petrol_data.csv  price.csv
Source/Data/processed_data/: ev.csv
Source/config/: config.yaml
Source/notebooks/: trail.ipynb
