[project]
name = "conversation-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elevenlabs>=2.27.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.1",
]
