[project]
name = "conversation-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elevenlabs>=2.27.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.2",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.1.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
    "tabulate>=0.9.0",
]
